Some animation changes and removing redundant code

--- a/Front End/DPay Webpage.html
+++ b/Front End/DPay Webpage.html
@@ -17,7 +17,7 @@
         <nav id="navbar" class="navbar">
             <ul class="nav-list">
                 <li class="nav-item-left"><a href="#payment-page">DPay</a></li>
-                <li class="nav-item-left"><a href="#tokens-page">Tokens</a></li>
+                <li class="nav-item-left"><a href="#coins-page">Coins We Accept</a></li>
                 <!-- Finish when known how to link wallet and change blockchain -->
                 <li class="nav-item-right network-button">
                     <div class="dropdown">
@@ -29,7 +29,7 @@
                         </button>
                         <div class="dropdown-content">
                             <a href="#" data-network="Ethereum"><img src="https://cdn.cdnlogo.com/logos/e/81/ethereum-eth.svg" alt="Ethereum" class="dropdown-icon">Ethereum</a>
-                            <a href="#" data-network="BNB Chain"><img src="https://cryptologos.cc/logos/binance-coin-bnb-logo.svg" alt="Binance" class="dropdown-icon">BNB Chain</a>
+                            <a href="#" data-network="BNB Chain"><img src="https://cryptologos.cc/logos/bnb-bnb-logo.svg?v=024" alt="Binance" class="dropdown-icon">BNB Chain</a>
                             <a href="#" data-network="Polygon"><img src="https://cdn.iconscout.com/icon/free/png-512/free-polygon-token-4086725-3379855.png?f=avif&w=256" alt="Polygon" class="dropdown-icon">Polygon</a>
                             <a href="#" data-network="Optimism"><img src="https://cryptologos.cc/logos/optimism-ethereum-op-logo.svg?v=024" alt="Optimism" class="dropdown-icon">Optimism</a>
                         </div>
