Added more crypto

--- a/Front End/DPay Webpage.html
+++ b/Front End/DPay Webpage.html
@@ -47,7 +47,7 @@
                 <section id="payment-details">
                     <div class="wallet-info">
                       <div class="level"><h2>Your Wallet</h2></div>
-                      <ol>
+                      <ul>
                         <li class="coin-button">
                             <div class="coin-dropdown">
                                 <button class="change-coin">
@@ -64,19 +64,24 @@
                                     <a href="#" data-network="XRP"><img src="https://cryptologos.cc/logos/xrp-xrp-logo.svg?v=024" alt="Ripple" class="coin-dropdown-icon">XRP</a>
                                     <a href="#" data-network="ADA"><img src="https://cryptologos.cc/logos/cardano-ada-logo.svg?v=024" alt="Cardano" class="coin-dropdown-icon">ADA</a>
                                     <a href="#" data-network="WBTC"><img src="https://cryptologos.cc/logos/wrapped-bitcoin-wbtc-logo.svg?v=024" alt="Wrapped Bitcoin" class="coin-dropdown-icon">WBTC</a>
+                                    <a href="#" data-network="DOGE"><img src="https://cryptologos.cc/logos/dogecoin-doge-logo.svg?v=024" alt="Dogecoin" class="coin-dropdown-icon">DOGE</a>
+                                    <a href="#" data-network="MATIC"><img src="https://cdn.iconscout.com/icon/free/png-512/free-polygon-token-4086725-3379855.png?f=avif&w=256" alt="Polygon" class="coin-dropdown-icon">MATIC</a>
+                                    <a href="#" data-network="SOL"><img src="https://cryptologos.cc/logos/solana-sol-logo.svg?v=024" alt="Solana" class="coin-dropdown-icon">SOL</a>
+                                    <a href="#" data-network="SHIB"><img src="https://cryptologos.cc/logos/shiba-inu-shib-logo.svg?v=024" alt="Shiba Inu" class="coin-dropdown-icon">SHIB</a>
+                                    <a href="#" data-network="DOT"><img src="https://cryptologos.cc/logos/polkadot-new-dot-logo.svg?v=024" alt="Polkadot" class="coin-dropdown-icon">DOT</a>
                                 </div>
                         </li>
                         <li>GBP Amount</li>
                         <li>Equiv Coin Amount</li>
-                      </ol>
+                      </ul>
                     </div>
                     <div class="wallet-info">
                       <div class="level"><h2>Target Wallet</h2></div>
-                      <ol>
+                      <ul>
                         <li>Address</li>
                         <li>Recipient Coin</li>
 
-                      </ol>
+                      </ul>
                     </div>
                     <button class="btn">Pay</button>
                 </section>
