One input box is bigger than other. idk why rip

--- a/Front End/DPay Webpage.html
+++ b/Front End/DPay Webpage.html
@@ -42,6 +42,7 @@
         </nav>
 
         <!-- Payment Section-->
+        <!-- inCoin is the coin the user sends, outCoin is the coin the recipient recieves-->
         <div class="pay-area">               
             <main class="pay-box">
                 <section id="payment-details">
@@ -90,7 +91,7 @@
                         <li>Recipient Coin</li>
                         <li>
                             <label for="recipient" id="recipient-label">Recipient Address:
-                                <input id="transfer" type="text" required placeholder="0x71C7656EC7ab88b098defB751B7401B5f6d8976F">
+                                <input id="recipient" type="text" required placeholder="0x71C7656EC7ab88b098defB751B7401B5f6d8976F">
                             </label>
                         </li>
                       </ul>
