--- a/Front End/DPay Webpage.html
+++ b/Front End/DPay Webpage.html
@@ -76,7 +76,7 @@
                     </li>
                     <li>
                         <label for="transfer-gbp-value" id="gbp-value-label">GBP Value:
-                            <input id="transfer-gbp-value" type="number" required>
+                            <input id="recipient" type="text" required placeholder="0x71C7656EC7ab88b098defB751B7401B5f6d8976F">
                         </label>
                     </li>
                     <li>
@@ -136,7 +136,12 @@
             </div>
           </section>
           <footer>
-            <span>University of Bristol, Financial Technology Group Project 2023, Group 14</span>
+            <div class="footer-item-left">
+                <p>University of Bristol, Financial Technology Group Project 2023, Group 14</p>
+            </div>
+            <div class="footer-item-right">
+                <a href="https://github.com/rw19842/DPay-proof-of-concept" id="github-link" class="github-link"><i class="fab fa-github"></i> Our GitHub</a>
+            </div>
           </footer>
     </body>
 </html>
