Added popup function when ERC20 button clicked

--- a/Front End/DPay Webpage.html
+++ b/Front End/DPay Webpage.html
@@ -70,7 +70,12 @@
                                 <a href="#empty" data-network="SOL"><img src="https://cryptologos.cc/logos/solana-sol-logo.svg?v=024" alt="Solana" class="inCoin-dropdown-icon">SOL</a>
                                 <a href="#empty" data-network="SHIB"><img src="https://cryptologos.cc/logos/shiba-inu-shib-logo.svg?v=024" alt="Shiba Inu" class="inCoin-dropdown-icon">SHIB</a>
                                 <a href="#empty" data-network="DOT"><img src="https://cryptologos.cc/logos/polkadot-new-dot-logo.svg?v=024" alt="Polkadot" class="inCoin-dropdown-icon">DOT</a>
-                                <a href="#empty" data-network="ERC-20"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Icons8_flat_plus.svg/480px-Icons8_flat_plus.svg.png" alt="ERC-20 Addition" class="inCoin-dropdown-icon">ERC20</a>
+                                <a href="#empty" data-network="ERC-20" id="erc20-popup-link"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Icons8_flat_plus.svg/480px-Icons8_flat_plus.svg.png" alt="ERC-20 Addition" class="inCoin-dropdown-icon">ERC20</a>
+                                <div class="popup" id="erc20-Popup">
+                                    <h2>Popup Content</h2>
+                                    <p>Some text in the popup.</p>
+                                    <a href="#" class="close">Close</a>
+                                </div>
                             </div>
                         </div>
                     </li>
