--- a/Front End/index.html
+++ b/Front End/index.html
@@ -1,20 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Javascript Test</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./CSS/index.css">
 </head>
 <body>
-    <script>
-        async function connect() {
-            if (typeof window.ethereum !== "undefined") {
-                await ethereum.request({method:"eth_requestAccounts"});
-            }
-        }
+    <div class="box wrapper">
+        <div class="title">
+            <h2>Featured Products</h2>
+        </div>
 
-        async function execute() {
-            
-        }
-    </script>
-    <button id="Connect" onclick="connect()">Connect</button>
+        <div class="content">
+            <ul>
+                <li>
+                    <a href="file:///C:/Users/yangy/Desktop/code/Test/Goods1.html">
+                        <img src="./images/Apple.png" alt="">
+                        <h3>Juicy Apple</h3>
+                        <p><span>BTC 0.0002</span></p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./images/Apple.png" alt="">
+                        <h3>Juicy Apple</h3>
+                        <p><span>￡5</span></p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./images/Apple.png" alt="">
+                        <h3>Apple</h3>
+                        <p><span>￡5</span></p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./images/Apple.png" alt="">
+                        <h3>Apple</h3>
+                        <p><span>￡5</span></p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./images/Apple.png" alt="">
+                        <h3>Apple</h3>
+                        <p><span>￡5</span></p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./images/Apple.png" alt="">
+                        <h3>Apple</h3>
+                        <p><span>￡5</span></p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./images/Apple.png" alt="">
+                        <h3>Apple</h3>
+                        <p><span>￡5</span></p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./images/Apple.png" alt="">
+                        <h3>Apple</h3>
+                        <p><span>￡5</span></p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./images/Apple.png" alt="">
+                        <h3>Apple</h3>
+                        <p><span>￡5</span></p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./images/Apple.png" alt="">
+                        <h3>Apple</h3>
+                        <p><span>￡5</span></p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
