--- a/Front End/DPay Webpage.html
+++ b/Front End/DPay Webpage.html
@@ -109,7 +109,7 @@
                     </li>
                     <li>
                         <label for="transfer-gbp-value" id="gbp-value-label">GBP Value:
-                            <input id="recipient" type="text" required placeholder="0x71C7656EC7ab88b098defB751B7401B5f6d8976F">
+                            <input id="recipient" type="number" required placeholder="159.99">
                         </label>
                     </li>
                     <li>
@@ -140,6 +140,10 @@
                                 </a>
                                 <a href="#empty" data-network="USDC">
                                     <img src="https://cryptologos.cc/logos/usd-coin-usdc-logo.svg?v=024" alt="USD Coin" class="outCoin-dropdown-icon">USDC
+                                </a>
+                                <a href="#empty" data-network="ERC-20" id="erc20-popup-link">
+                                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Icons8_flat_plus.svg/480px-Icons8_flat_plus.svg.png" alt="ERC-20 Addition" class="inCoin-dropdown-icon">
+                                    <input id="erc20-token-address" type="text" required placeholder="ERC-20 Token Address">
                                 </a>
                             </div>
                         </div>
