--- a/Front End/DPay Webpage.html
+++ b/Front End/DPay Webpage.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8">
         <meta name="description" content="Pay for your goods or services using the DPay application">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <link rel="stylesheet" href="styles.css">
-        <script defer src="script.js"></script>
+        <link rel="stylesheet" href="DPay Styles.css">
+        <script defer src="DPay Script.js"></script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source Sans Pro">
