Removed redundant code from wallet info sections

--- a/Front End/DPay Webpage.html
+++ b/Front End/DPay Webpage.html
@@ -97,7 +97,7 @@
                     </li>
                     <li>
                         <label for="transfer-gbp-value" id="gbp-value-label">GBP Value:
-                            <input id="recipient" type="number" required placeholder="159.99">
+                            <input id="transfer-gbp-value" type="number" required placeholder="159.99">
                         </label>
                     </li>
                     <li>
