--- a/Front End/DPay Webpage.html
+++ b/Front End/DPay Webpage.html
@@ -44,8 +44,16 @@
                         </div>
                     </div>
                 </li>
-                  
-                <li class="nav-item-right"><a href="#">Connect</a></li>
+                <li class="nav-item-right">
+                    <script>
+                        async function connect() {
+                            if (typeof window.ethereum !== "undefined") {
+                                ethereum.request({ method: "eth_resquestAccounts" })
+                            }
+                        }
+                    </script>
+                    <button id="connectButton" onclick="connect()">Connect</button>
+                </li>
                 <!-- Finish when known how to link wallet and change blockchain -->
             </ul>
         </nav>
