--- a/Front End/DPay Webpage.html
+++ b/Front End/DPay Webpage.html
@@ -30,13 +30,13 @@
                         <div class="dropdown-content">
                             <!-- #empty is just a placeholder until contract links are figured out-->
                             <a href="#empty" data-network="Ethereum">
-                                <img src="https://cdn.cdnlogo.com/logos/e/81/ethereum-eth.svg" alt="Ethereum" class="dropdown-icon">Ethereum
+                                <img src="https://cdn.cdnlogo.com/logos/e/81/ethereum-eth.svg" alt="Ethereum" class="dropdown-icon">Ethereum Mainnet
                             </a>
                             <a href="#empty" data-network="BNB Chain">
-                                <img src="https://cryptologos.cc/logos/bnb-bnb-logo.svg?v=024" alt="Binance" class="dropdown-icon">BNB Chain
+                                <img src="https://cryptologos.cc/logos/bnb-bnb-logo.svg?v=024" alt="Binance" class="dropdown-icon">BNB Smart Chain
                             </a>
                             <a href="#empty" data-network="Polygon">
-                                <img src="https://cdn.iconscout.com/icon/free/png-512/free-polygon-token-4086725-3379855.png?f=avif&w=256" alt="Polygon" class="dropdown-icon">Polygon
+                                <img src="https://cdn.iconscout.com/icon/free/png-512/free-polygon-token-4086725-3379855.png?f=avif&w=256" alt="Polygon" class="dropdown-icon">Polygon Mainnet
                             </a>
                             <a href="#empty" data-network="Optimism">
                                 <img src="https://cryptologos.cc/logos/optimism-ethereum-op-logo.svg?v=024" alt="Optimism" class="dropdown-icon">Optimism
