--- a/Front End/index.html
+++ b/Front End/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="./CSS/index.css">
 </head>
 <body>
+    <div class="head wrapper">
+        <div class="title">
+            <ul>
+                <li>Dpay</li>
+                <li>Online Store</li>
+            </ul>
+        </div>
+    </div>
     <div class="box wrapper">
         <div class="title">
             <h2>Featured Products</h2>
