Changed default icon to blank

--- a/Front End/DPay Webpage.html
+++ b/Front End/DPay Webpage.html
@@ -64,7 +64,7 @@
                     <li class="inCoin-button">
                         <div class="inCoin-dropdown">
                             <button class="change-inCoin">
-                                <img id="inCoin-icon" src="https://cdn.cdnlogo.com/logos/e/81/ethereum-eth.svg" alt="inCoin Icon" class="inCoin-icon">
+                                <img id="inCoin-icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="inCoin Icon" class="inCoin-icon">
                                 <svg id="inCoin-dropdown-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#98A1C0" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <polyline points="6 9 12 15 18 9"></polyline>
                                 </svg>
@@ -117,7 +117,7 @@
                     <li class ="outCoin-button">
                         <div class="outCoin-dropdown">
                             <button class="change-outCoin">
-                                <img id="outCoin-icon" src="https://cdn.cdnlogo.com/logos/e/81/ethereum-eth.svg" alt="outCoin" class="outCoin-icon">
+                                <img id="outCoin-icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="outCoin" class="outCoin-icon">
                                 <svg id="outCoin-dropdown-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#98A1C0" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <polyline points="6 9 12 15 18 9"></polyline>
                                 </svg>
