Optimism fixed, Celo and Arbitrum added

--- a/Front End/DPay Webpage.html
+++ b/Front End/DPay Webpage.html
@@ -38,8 +38,14 @@
                             <a href="#empty" data-network="Polygon">
                                 <img src="https://cdn.iconscout.com/icon/free/png-512/free-polygon-token-4086725-3379855.png?f=avif&w=256" alt="Polygon" class="dropdown-icon">Polygon Mainnet
                             </a>
-                            <a href="#empty" data-network="Optimism" onclick="switchToOptimism()">
+                            <a href="#empty" data-network="Optimism">
                                 <img src="https://cryptologos.cc/logos/optimism-ethereum-op-logo.svg?v=024" alt="Optimism" class="dropdown-icon">Optimism
+                            </a>
+                            <a href="#empty" data-network="Arbitrum One"">
+                                <img src="https://cryptologos.cc/logos/arbitrum-arb-logo.svg?v=025" alt="Arbitrum One" class="dropdown-icon">Arbitrum Onem
+                            </a>
+                            <a href="#empty" data-network="Celo Mainnet">
+                                <img src="https://cryptologos.cc/logos/celo-celo-logo.svg?v=025" alt="Celo Mainnet" class="dropdown-icon">Celo Mainnet
                             </a>
                         </div>
                     </div>
