Swapped £ specify for quantity specify. No calc.

--- a/Front End/DPay Webpage.html
+++ b/Front End/DPay Webpage.html
@@ -107,12 +107,7 @@
                     </li>
                     <li>
                         <label for="transfer-gbp-value" id="gbp-value-label">GBP Value:
-                            <input id="transfer-gbp-value" type="number" required placeholder="159.99">
-                        </label>
-                    </li>
-                    <li>
-                        <label for="transfer-quantity" id="quantity-label">Coin Quantity:
-                            <p id="transfer-quantity"></p>
+                            <p id="transfer-gbp-value"></p>
                         </label>
                     </li>
                     </ul>
@@ -152,6 +147,11 @@
                     <li>
                         <label for="recipient" id="recipient-label">Recipient Address:
                             <input id="recipient" type="text" required placeholder="0x71C7656EC7ab88b098defB751B7401B5f6d8976F">
+                        </label>
+                    </li>
+                    <li>
+                        <label for="transfer-quantity" id="quantity-label">Coin Quantity:
+                            <input id="transfer-quantity" type="number" required placeholder="0.0123">
                         </label>
                     </li>
                     </ul>
