There comes some details about getting the execute function work. Such as getting the user input and get the users' choice of type of coin

--- a/Front End/DPay Webpage.html
+++ b/Front End/DPay Webpage.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Pay for your goods or services using the DPay application">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" href="DPay Styles.css">
-        <script defer src="DPay Script.js"></script>
+        <script type="module" defer src="DPay Script.js"></script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source Sans Pro">
