--- a/Front End/index.html
+++ b/Front End/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="description" content="Corresponding Online stores for DPay application">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <link rel="stylesheet" href="C:\Users\yangy\Desktop\code\Test\CSS\index.css">
+        <link rel="stylesheet" href="..\Test\CSS\index.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source Sans Pro">
@@ -29,73 +29,73 @@
                 <div class="content">
                     <ul>
                         <li>
-                            <a href="file:///C:/Users/yangy/Desktop/code/Test/Goods1.html">
-                                <img src="C:\Users\yangy\Desktop\code\Test\images\Apple.jpg" alt="">
+                            <a href="..\Test\Goods1.html">
+                                <img src="..\Test\images\Apple.jpg" alt="">
                                 <h3>Juicy Apple</h3>
-                                <p><span>BTC 0.0002</span></p>
+                                <p><span>￡ 10</span></p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="C:\Users\yangy\Desktop\code\Test\images\Banana.jpg" alt="">
-                                <h3>Juicy Apple</h3>
-                                <p><span>￡5</span></p>
+                                <img src="..\Test\images\Banana.jpg" alt="">
+                                <h3>Banana</h3>
+                                <p><span>￡3.5</span></p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="C:\Users\yangy\Desktop\code\Test\images\Apple.jpg" alt="">
+                                <img src="..\Test\images\Orange.jpg" alt="">
+                                <h3>Orange</h3>
+                                <p><span>￡6</span></p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="..\Test\images\Mango.jpg" alt="">
+                                <h3>Mango</h3>
+                                <p><span>￡16</span></p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="..\Test\images\Watermelon.jpg" alt="">
+                                <h3>Watermelon</h3>
+                                <p><span>￡4</span></p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="..\Test\images\Grapes.jpg" alt="">
+                                <h3>Grapes</h3>
+                                <p><span>￡3</span></p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="..\Test\images\Coconut.jpg" alt="">
+                                <h3>Coconut</h3>
+                                <p><span>￡12</span></p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="..\Test\images\Pear.jpg" alt="">
+                                <h3>Pear</h3>
+                                <p><span>￡9</span></p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="..\Test\images\Pitaya.jpg" alt="">
                                 <h3>Apple</h3>
-                                <p><span>￡5</span></p>
+                                <p><span>￡4.5</span></p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="C:\Users\yangy\Desktop\code\Test\images\Apple.jpg" alt="">
-                                <h3>Apple</h3>
-                                <p><span>￡5</span></p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="C:\Users\yangy\Desktop\code\Test\images\Apple.jpg" alt="">
-                                <h3>Apple</h3>
-                                <p><span>￡5</span></p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="C:\Users\yangy\Desktop\code\Test\images\Apple.jpg" alt="">
-                                <h3>Apple</h3>
-                                <p><span>￡5</span></p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="C:\Users\yangy\Desktop\code\Test\images\Apple.jpg"" alt="">
-                                <h3>Apple</h3>
-                                <p><span>￡5</span></p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="C:\Users\yangy\Desktop\code\Test\images\Apple.jpg" alt="">
-                                <h3>Apple</h3>
-                                <p><span>￡5</span></p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="C:\Users\yangy\Desktop\code\Test\images\Apple.jpg" alt="">
-                                <h3>Apple</h3>
-                                <p><span>￡5</span></p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="C:\Users\yangy\Desktop\code\Test\images\Apple.jpg" alt="">
-                                <h3>Apple</h3>
-                                <p><span>￡5</span></p>
+                                <img src="..\Test\images\Pomegranate.jpg" alt="">
+                                <h3>Pomegranate</h3>
+                                <p><span>￡7.5</span></p>
                             </a>
                         </li>
                     </ul>
