--- a/Front End/index.html
+++ b/Front End/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="description" content="Corresponding Online stores for DPay application">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <link rel="stylesheet" href="..\Test\CSS\index.css">
+        <link rel="stylesheet" href="..\Front End\CSS\index.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source Sans Pro">
