--- a/Front End/index.html
+++ b/Front End/index.html
@@ -29,71 +29,71 @@
                 <div class="content">
                     <ul>
                         <li>
-                            <a href="..\Test\Goods1.html">
-                                <img src="..\Test\images\Apple.jpg" alt="">
+                            <a href="..\Front End\Goods1.html">
+                                <img src="..\Front End\images\Apple.jpg" alt="">
                                 <h3>Juicy Apple</h3>
                                 <p><span>￡ 10</span></p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="..\Test\images\Banana.jpg" alt="">
+                                <img src="..\Front End\images\Banana.jpg" alt="">
                                 <h3>Banana</h3>
                                 <p><span>￡3.5</span></p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="..\Test\images\Orange.jpg" alt="">
+                                <img src="..\Front End\images\Orange.jpg" alt="">
                                 <h3>Orange</h3>
                                 <p><span>￡6</span></p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="..\Test\images\Mango.jpg" alt="">
+                                <img src="..\Front End\images\Mango.jpg" alt="">
                                 <h3>Mango</h3>
                                 <p><span>￡16</span></p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="..\Test\images\Watermelon.jpg" alt="">
+                                <img src="..\Front End\images\Watermelon.jpg" alt="">
                                 <h3>Watermelon</h3>
                                 <p><span>￡4</span></p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="..\Test\images\Grapes.jpg" alt="">
+                                <img src="..\Front End\images\Grapes.jpg" alt="">
                                 <h3>Grapes</h3>
                                 <p><span>￡3</span></p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="..\Test\images\Coconut.jpg" alt="">
+                                <img src="..\Front End\images\Coconut.jpg" alt="">
                                 <h3>Coconut</h3>
                                 <p><span>￡12</span></p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="..\Test\images\Pear.jpg" alt="">
+                                <img src="..\Front End\images\Pear.jpg" alt="">
                                 <h3>Pear</h3>
                                 <p><span>￡9</span></p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="..\Test\images\Pitaya.jpg" alt="">
+                                <img src="..\Front End\images\Pitaya.jpg" alt="">
                                 <h3>Apple</h3>
                                 <p><span>￡4.5</span></p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="..\Test\images\Pomegranate.jpg" alt="">
+                                <img src="..\Front End\images\Pomegranate.jpg" alt="">
                                 <h3>Pomegranate</h3>
                                 <p><span>￡7.5</span></p>
                             </a>
