--- a/Front End/Goods1.html
+++ b/Front End/Goods1.html
@@ -23,7 +23,7 @@
         <main>
             <div id="Online-Store" class="Online-Store">
                 <div class="left-content">
-                    <img id="appleImage" src="../Test/images/apple_12.jpg" alt="">
+                    <img id="appleImage" src="../Front End/images/apple_12.jpg" alt="">
                 </div>
                 <div class="right-content">
                     <ul>
