--- a/Front End/Goods1.html
+++ b/Front End/Goods1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>DPay Interface</title>
+        <title>DPay Goods Detail</title>
         <meta charset="utf-8">
         <meta name="description" content="Detail page for Online Store">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
