--- a/Front End/Goods1.html
+++ b/Front End/Goods1.html
@@ -77,6 +77,7 @@
                     </ul>
                 </div>          
             </div>
+        </main> 
 
         <section id="tokens-section" class="tokens-section">
             <div class="tokens-header">
