fixed connect button bug

--- a/Front End/DPay Webpage.html
+++ b/Front End/DPay Webpage.html
@@ -95,9 +95,9 @@
                                 <a href="#empty" data-inCoin="shiba-inu" data-inSymbol="SHIB">
                                     <img src="https://cryptologos.cc/logos/shiba-inu-shib-logo.svg?v=024" alt="Shiba Inu" class="inCoin-dropdown-icon">SHIB
                                 </a>
-                                <a href="#empty" data-inCoin="ERC-20" id="erc20-popup-link" data-inSymbol="ERC-20 Tokens">
+                                <a href="#empty" data-inCoin="ERC-20" id="inCoinErc20-popup-link" data-inSymbol="ERC-20 Tokens">
                                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Icons8_flat_plus.svg/480px-Icons8_flat_plus.svg.png" alt="ERC-20 Addition" class="inCoin-dropdown-icon">
-                                    <input id="erc20-token-address" type="text" required placeholder="ERC-20 Token Address">
+                                    <input id="inCoinErc20-token-address" type="text" required placeholder="ERC-20 Token Address">
                                 </a>
                             </div>
                         </div>
@@ -134,9 +134,9 @@
                                 <a href="#empty" data-outCoin="weth" data-outSymbol="WETH">
                                     <img src="https://ucarecdn.com/c01c9021-a497-41b5-8597-9ab4e71440c1/wrapped-eth.png" alt="Wrapped Ethereum" class="outCoin-dropdown-icon">WETH
                                 </a>
-                                <a href="#empty" data-outCoin="" data-outSymbol="ERC-20" id="erc20-popup-link">
+                                <a href="#empty" data-outCoin="" data-outSymbol="ERC-20" id="outCoinErc20-popup-link">
                                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Icons8_flat_plus.svg/480px-Icons8_flat_plus.svg.png" alt="ERC-20 Addition" class="inCoin-dropdown-icon">
-                                    <input id="erc20-token-address" type="text" required placeholder="ERC-20 Token Address">
+                                    <input id="outCoinErc20-token-address" type="text" required placeholder="ERC-20 Token Address">
                                 </a>
                             </div>
                         </div>
@@ -198,6 +198,7 @@
                 </a>
             </div>
           </footer>
+        <script src="../dist/webPackageBundle.js"></script>
     </body>
 </html>
 
